# orchestration-canvas

./: .gitignore  MANUAL.md  package-lock.json  package.json  playwright.config.js  vite.config.js
.github/workflows/: build.yml
src/: App.jsx  index.html  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: letta.rs  lib.rs  main.rs  streaming.rs
src/api/: anthropic.js  dataSources.js  github.js  runEngine.js  runHistory.js
src/components/: ArchitectPanel.jsx  Canvas.jsx  CostEstimator.jsx  DataSourceEditor.jsx  EdgeLayer.jsx  ExportImportMenu.jsx  HelpTip.jsx  HumanReviewModal.jsx  LeftPanel.jsx  LibraryPanel.jsx  Minimap.jsx  NodeCard.jsx  OutputRenderer.jsx  PrefsModal.jsx  RunBriefPanel.jsx  RunHistoryPanel.jsx  RunOutputPanel.jsx  SchemaEditor.jsx  TemplateDrawer.jsx  ToastProvider.jsx  TopBar.jsx  ValidationBar.jsx  ViewportEditor.jsx  VizPanel.jsx
src/data/: dataSourceTypes.js  infranodusOps.js  library.js  llmPricing.js  llmProviders.js  nodeStyles.js  outputDesigns.js  outputTemplates.js  skills.js  systemPrompts.js  templates.js
src/hooks/: useGraphHistory.js  useRunEngine.js
src/styles/: index.css
src/utils/: db.js  export.js  exportToOpenMultiAgent.js  geometry.js  graph.js  infranodusViz.js  secureStore.js
tests/e2e/: ai-features.spec.js  app-loads.spec.js  canvas-interaction.spec.js  templates.spec.js
