[package]
name = "orchestration-canvas"
version = "0.3.0"
edition = "2021"

[lib]
name = "orchestration_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = "s"
# strip = true is intentionally omitted — it breaks universal binary
# creation on macOS because lipo cannot merge pre-stripped objects.
